feat: m21 - Make live paper trading understandable from the UI
